
2019-05-05  Simon Sobisch <simonsobisch@gnu.org>

	* bootstrap: only set executable bit for current user,
	  suppress most error messages (that can also occur if
	  execution rights are already available but we can't set them)

2019-04-06  Simon Sobisch <simonsobisch@gnu.org>

	* pre-inst-env.in: new file, for launching programs 
	  from build directory, after Mathieu Lirzin (automake)

2019-03-19  Simon Sobisch <simonsobisch@gnu.org>

	* config.guess, config.sub, texinfo.tex:
	  updated to recent version from
	  https://git.savannah.gnu.org/cgit/gnulib.git/tree/build-aux/

2019-02-18  Simon Sobisch <simonsobisch@gnu.org>

	* bootstrap: additional user hints,
	  reading GCMAINPATH to get clean main path (adjusted in autogen.sh)

2018-11-25  Simon Sobisch <simonsobisch@gnu.org>

	* bootstrap: added missing setting of LC_ALL for generating tarstamp.h,
	  added parts (currently commented out) to update files in build-aux,
	  refactoring

2018-10-22  Simon Sobisch <simonsobisch@gnu.org>

	* config.guess, config.sub, install-sh, texinfo.tex:
	  updated to recent version from
	  https://git.savannah.gnu.org/cgit/gnulib.git/tree/build-aux/

2018-06-04  Simon Sobisch <simonsobisch@gnu.org>

	* ltmain.sh [WIN32, !GCC]: local fix for libtool issue #109514 to
	  support buildinf with configure using other Win32 compilers than MSC

2018-02-28  Simon Sobisch <simonsobisch@gnu.org>

	* bootstrap: ensure auxiliary scripts are executable before
	  running autoconf; only create tarstamp.h if missing

2017-12-06  Simon Sobisch <simonsobisch@gnu.org>

	* bootstrap: ensure auxiliary scripts are executable

2017-12-08  Simon Sobisch <simonsobisch@gnu.org>

	* compile, config.guess, config.sub, depcomp, install-sh, mdate-sh,
	  texinfo.tex: updated to recent version from
	  https://git.savannah.gnu.org/cgit/gnulib.git/tree/build-aux/
	* ylwrap, missing: updated to recent version from
	  https://git.savannah.gnu.org/cgit/automake.git/tree/lib/
	* missing: adjusted perl_URL and flex_URL
